fix: separate token transform and build step

--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -16,6 +16,7 @@ jobs:
           node-version: '14.x'
       - run: npm install
       - run: npm test
+      - run: npm run transform
       - run: npm run build
       - run: npm run semantic-release
         env:
