--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "semantic-release": "semantic-release",
     "commit": "git-cz",
-    "build": "token-transformer --expandTypography=false tokens/tokens.json tokens/style-dictionary.json & node build.js"
+    "transform": "token-transformer --expandTypography=false tokens/tokens.json tokens/style-dictionary.json",
+    "build": "node build.js"
   },
   "author": "Dylan Depass <dyland@adobe.com>",
   "license": "Apache License 2.0",
