--- a/package.json
+++ b/package.json
@@ -15,22 +15,31 @@
   "scripts": {
     "semantic-release": "semantic-release",
     "commit": "git-cz",
-    "transform": "token-transformer --expandTypography=false tokens/tokens.json tokens/style-dictionary.json",
-    "build": "node build.js"
+    "transform": "npm run transform-global && npm run transform-light && npm run transform-dark",
+    "transform-global": "token-transformer --expandTypography=true --expandShadow=true tokens/tokens.json tokens/global.json global",
+    "transform-light": "token-transformer --expandTypography=true --expandShadow=true tokens/tokens.json tokens/light-theme.json light",
+    "transform-dark": "token-transformer --expandTypography=true --expandShadow=true tokens/tokens.json tokens/dark-theme.json dark",
+    "build": "npm run transform && node build.js"
   },
   "author": "Dylan Depass <dyland@adobe.com>",
   "license": "Apache License 2.0",
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "style-dictionary": "^3.7.1"
+  },
   "devDependencies": {
+    "@adobe/eslint-config-helix": "1.3.2",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-import": "2.26.0",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "9.0.0",
     "commitizen": "4.2.4",
     "semantic-release": "19.0.2",
     "cz-conventional-changelog": "3.3.0",
-    "style-dictionary": "^3.7.1",
-    "token-transformer": "0.0.27"
+    "token-transformer": "0.0.27",
+    "eslint": "8.19.0"
   }
 }
