--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "style-dictionary": "^3.7.1"
   },
+  "bin": "./bin/index.js",
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.3.2",
     "eslint-plugin-header": "3.1.1",
