feat: support multi brand

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "transform-global": "token-transformer --expandTypography=true --expandShadow=true tokens/tokens.json tokens/global.json global",
     "transform-light": "token-transformer --expandTypography=true --expandShadow=true tokens/tokens.json tokens/light-theme.json light",
     "transform-dark": "token-transformer --expandTypography=true --expandShadow=true tokens/tokens.json tokens/dark-theme.json dark",
+    "test-transform": "token-transformer --expandTypography=true --expandShadow=true tokens/global.json output.json global",
     "build": "npm run transform && node build.js"
   },
   "author": "Dylan Depass <dyland@adobe.com>",
@@ -40,7 +41,7 @@
     "commitizen": "4.2.4",
     "semantic-release": "19.0.2",
     "cz-conventional-changelog": "3.3.0",
-    "token-transformer": "0.0.27",
+    "token-transformer": "0.0.28",
     "eslint": "8.19.0"
   }
 }
